# lanclip

./: .gitignore  Cargo.toml  LICENSE  README.md  文档.md  设计文档.md
.github/workflows/: release.yml
crates/lanclip-app/: Cargo.toml
crates/lanclip-app/src/: clipboard_history.rs  clipboard_sync.rs  config.rs  connections.rs  history_store.rs  lib.rs  logging.rs  pairing.rs  transfer_service.rs
crates/lanclip-clipboard/: Cargo.toml
crates/lanclip-clipboard/src/: cliprs.rs  lib.rs  macos.rs
crates/lanclip-discovery/: Cargo.toml
crates/lanclip-discovery/src/: lib.rs
crates/lanclip-domain/: Cargo.toml
crates/lanclip-domain/src/: lib.rs
crates/lanclip-network/: Cargo.toml
crates/lanclip-network/src/: lib.rs
crates/lanclip-proto/: Cargo.toml
crates/lanclip-proto/src/: lib.rs
crates/lanclip-transfer/: Cargo.toml
crates/lanclip-transfer/src/: lib.rs
crates/lanclip-ui/: Cargo.toml
crates/lanclip-ui/src/: control_api.rs  control_main.rs  control_panel.rs  hotkey_config.rs  main.rs  tray.rs  web_panel.rs
packaging/macos/: create_dmg.sh
packaging/windows/: lanclip.nsi
scripts/: make_icons.py
