[package]
name = "lanclip-transfer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
lanclip-domain = { workspace = true }
lanclip-proto = { workspace = true }
lanclip-network = { workspace = true }

tokio = { workspace = true }
async-channel = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }
